# tictactoe

./: CMakeLists.txt  README.md  main.cpp
GUI/: window.cpp  window.h
logic/: logic.cpp  logic.h
